--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
             "flowFile": "flows.json",
             "credentialsFile": "flows_cred.json"
         }
+    },
+    "dependencies": {
+        "node-red-contrib-moment": "4.0.0",
+        "node-red-contrib-projectdir": "2.0.5",
+        "node-red-contrib-queued-sqlite-fix": "0.0.1",
+        "node-red-contrib-uibuilder": "5.0.2",
+        "node-red-node-serialport": "1.0.1"
     }
 }
